[package]
name = "pdf_form_ids"
version = "0.7.0"
authors = ["Jake <jsandler18@gmail.com>", "Malte <voos.malte@gmail.com>"]
description = "A library for programatically filling out pdf forms"
readme = "README.md"
keywords = ["pdf", "form"]
license = "MIT"

[dependencies.bitflags]
version = "1.0.1"

[dependencies.derive-error]
version = "0.0.4"

[dependencies.lopdf]
version = "0.24.0"
features = ["embed_image"]
